grammar/build/HomweParser.js
// Generated from Homwe.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import HomweListener from './HomweListener.js';
import HomweVisitor from './HomweVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HomweParser extends antlr4.Parser {

    static grammarFileName = "Homwe.g4";
    static literalNames = [ null, "'mu'", "'homwe'", "'mune'", "'ine'", 
                            "'isa'", "'('", "')'", "'kubva'", "'chinja'", 
                            "'kuita'", "'bvisa'", "'zvese'", "'ane'", "'vane'", 
                            "'zvine'", "'pane'", "'rine'", "'dzine'", "'kune'", 
                            "'kane'", "'svine'", "'mine'", "'chine'", "'rune'", 
                            "'tune'", "'twune'", "'zine'", "'='", "','", 
                            "'_'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "IDENTIFIER", 
                             "NUMBER", "STRING", "WS", "COMMENT" ];
    static ruleNames = [ "program", "statement", "createStatement", "readStatement", 
                         "updateStatement", "deleteStatement", "selectColumns", 
                         "whereClause", "aneVariants", "condition", "limitClause", 
                         "columnList", "valueList", "value" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HomweParser.ruleNames;
        this.literalNames = HomweParser.literalNames;
        this.symbolicNames = HomweParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HomweParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 28;
	            this.statement();
	            this.state = 31; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2147490402) !== 0));
	        this.state = 33;
	        this.match(HomweParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HomweParser.RULE_statement);
	    try {
	        this.state = 39;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 35;
	            this.createStatement();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 36;
	            this.readStatement();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 37;
	            this.updateStatement();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 38;
	            this.deleteStatement();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createStatement() {
	    let localctx = new CreateStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HomweParser.RULE_createStatement);
	    try {
	        this.state = 55;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            localctx = new CreateCollectionContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 41;
	            this.match(HomweParser.T__0);
	            this.state = 42;
	            this.match(HomweParser.T__1);
	            this.state = 43;
	            this.match(HomweParser.T__2);
	            this.state = 44;
	            this.match(HomweParser.IDENTIFIER);
	            break;
	        case 31:
	            localctx = new DefineColumnsContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 45;
	            this.match(HomweParser.IDENTIFIER);
	            this.state = 46;
	            this.match(HomweParser.T__3);
	            this.state = 47;
	            this.columnList();
	            break;
	        case 5:
	            localctx = new InsertValuesContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 48;
	            this.match(HomweParser.T__4);
	            this.state = 49;
	            this.match(HomweParser.T__5);
	            this.state = 50;
	            this.valueList();
	            this.state = 51;
	            this.match(HomweParser.T__6);
	            this.state = 52;
	            this.match(HomweParser.T__0);
	            this.state = 53;
	            this.match(HomweParser.IDENTIFIER);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	readStatement() {
	    let localctx = new ReadStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HomweParser.RULE_readStatement);
	    var _la = 0;
	    try {
	        localctx = new SelectStatementContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this.selectColumns();
	        this.state = 58;
	        this.match(HomweParser.T__7);
	        this.state = 59;
	        this.match(HomweParser.T__0);
	        this.state = 60;
	        this.match(HomweParser.IDENTIFIER);
	        this.state = 62;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 268427288) !== 0)) {
	            this.state = 61;
	            this.whereClause();
	        }

	        this.state = 65;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===32) {
	            this.state = 64;
	            this.limitClause();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	updateStatement() {
	    let localctx = new UpdateStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HomweParser.RULE_updateStatement);
	    try {
	        localctx = new UpdateColumnContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(HomweParser.T__8);
	        this.state = 68;
	        this.match(HomweParser.IDENTIFIER);
	        this.state = 69;
	        this.match(HomweParser.T__9);
	        this.state = 70;
	        this.value();
	        this.state = 71;
	        this.whereClause();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deleteStatement() {
	    let localctx = new DeleteStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HomweParser.RULE_deleteStatement);
	    try {
	        localctx = new DeleteRecordContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(HomweParser.T__10);
	        this.state = 74;
	        this.match(HomweParser.IDENTIFIER);
	        this.state = 75;
	        this.whereClause();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectColumns() {
	    let localctx = new SelectColumnsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HomweParser.RULE_selectColumns);
	    try {
	        this.state = 83;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	            localctx = new SpecificColumnsContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 77;
	            this.match(HomweParser.T__5);
	            this.state = 78;
	            this.columnList();
	            this.state = 79;
	            this.match(HomweParser.T__6);
	            break;
	        case 31:
	            localctx = new ColumnListSelectContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 81;
	            this.columnList();
	            break;
	        case 12:
	            localctx = new AllColumnsContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 82;
	            this.match(HomweParser.T__11);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whereClause() {
	    let localctx = new WhereClauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HomweParser.RULE_whereClause);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this.aneVariants();
	        this.state = 86;
	        this.condition();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aneVariants() {
	    let localctx = new AneVariantsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HomweParser.RULE_aneVariants);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 268427288) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HomweParser.RULE_condition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(HomweParser.IDENTIFIER);
	        this.state = 91;
	        this.match(HomweParser.T__27);
	        this.state = 92;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	limitClause() {
	    let localctx = new LimitClauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HomweParser.RULE_limitClause);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(HomweParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	columnList() {
	    let localctx = new ColumnListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HomweParser.RULE_columnList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(HomweParser.IDENTIFIER);
	        this.state = 101;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===29) {
	            this.state = 97;
	            this.match(HomweParser.T__28);
	            this.state = 98;
	            this.match(HomweParser.IDENTIFIER);
	            this.state = 103;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valueList() {
	    let localctx = new ValueListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HomweParser.RULE_valueList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.value();
	        this.state = 109;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===29) {
	            this.state = 105;
	            this.match(HomweParser.T__28);
	            this.state = 106;
	            this.value();
	            this.state = 111;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, HomweParser.RULE_value);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        _la = this._input.LA(1);
	        if(!(((((_la - 30)) & ~0x1f) === 0 && ((1 << (_la - 30)) & 15) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

HomweParser.EOF = antlr4.Token.EOF;
HomweParser.T__0 = 1;
HomweParser.T__1 = 2;
HomweParser.T__2 = 3;
HomweParser.T__3 = 4;
HomweParser.T__4 = 5;
HomweParser.T__5 = 6;
HomweParser.T__6 = 7;
HomweParser.T__7 = 8;
HomweParser.T__8 = 9;
HomweParser.T__9 = 10;
HomweParser.T__10 = 11;
HomweParser.T__11 = 12;
HomweParser.T__12 = 13;
HomweParser.T__13 = 14;
HomweParser.T__14 = 15;
HomweParser.T__15 = 16;
HomweParser.T__16 = 17;
HomweParser.T__17 = 18;
HomweParser.T__18 = 19;
HomweParser.T__19 = 20;
HomweParser.T__20 = 21;
HomweParser.T__21 = 22;
HomweParser.T__22 = 23;
HomweParser.T__23 = 24;
HomweParser.T__24 = 25;
HomweParser.T__25 = 26;
HomweParser.T__26 = 27;
HomweParser.T__27 = 28;
HomweParser.T__28 = 29;
HomweParser.T__29 = 30;
HomweParser.IDENTIFIER = 31;
HomweParser.NUMBER = 32;
HomweParser.STRING = 33;
HomweParser.WS = 34;
HomweParser.COMMENT = 35;

HomweParser.RULE_program = 0;
HomweParser.RULE_statement = 1;
HomweParser.RULE_createStatement = 2;
HomweParser.RULE_readStatement = 3;
HomweParser.RULE_updateStatement = 4;
HomweParser.RULE_deleteStatement = 5;
HomweParser.RULE_selectColumns = 6;
HomweParser.RULE_whereClause = 7;
HomweParser.RULE_aneVariants = 8;
HomweParser.RULE_condition = 9;
HomweParser.RULE_limitClause = 10;
HomweParser.RULE_columnList = 11;
HomweParser.RULE_valueList = 12;
HomweParser.RULE_value = 13;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_program;
    }

	EOF() {
	    return this.getToken(HomweParser.EOF, 0);
	};

	statement = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StatementContext);
	    } else {
	        return this.getTypedRuleContext(StatementContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitProgram(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitProgram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class StatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_statement;
    }

	createStatement() {
	    return this.getTypedRuleContext(CreateStatementContext,0);
	};

	readStatement() {
	    return this.getTypedRuleContext(ReadStatementContext,0);
	};

	updateStatement() {
	    return this.getTypedRuleContext(UpdateStatementContext,0);
	};

	deleteStatement() {
	    return this.getTypedRuleContext(DeleteStatementContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterStatement(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitStatement(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitStatement(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CreateStatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_createStatement;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class CreateCollectionContext extends CreateStatementContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterCreateCollection(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitCreateCollection(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitCreateCollection(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.CreateCollectionContext = CreateCollectionContext;

class InsertValuesContext extends CreateStatementContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	valueList() {
	    return this.getTypedRuleContext(ValueListContext,0);
	};

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterInsertValues(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitInsertValues(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitInsertValues(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.InsertValuesContext = InsertValuesContext;

class DefineColumnsContext extends CreateStatementContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	columnList() {
	    return this.getTypedRuleContext(ColumnListContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterDefineColumns(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitDefineColumns(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitDefineColumns(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.DefineColumnsContext = DefineColumnsContext;

class ReadStatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_readStatement;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class SelectStatementContext extends ReadStatementContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	selectColumns() {
	    return this.getTypedRuleContext(SelectColumnsContext,0);
	};

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	whereClause() {
	    return this.getTypedRuleContext(WhereClauseContext,0);
	};

	limitClause() {
	    return this.getTypedRuleContext(LimitClauseContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterSelectStatement(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitSelectStatement(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitSelectStatement(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.SelectStatementContext = SelectStatementContext;

class UpdateStatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_updateStatement;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class UpdateColumnContext extends UpdateStatementContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	value() {
	    return this.getTypedRuleContext(ValueContext,0);
	};

	whereClause() {
	    return this.getTypedRuleContext(WhereClauseContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterUpdateColumn(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitUpdateColumn(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitUpdateColumn(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.UpdateColumnContext = UpdateColumnContext;

class DeleteStatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_deleteStatement;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class DeleteRecordContext extends DeleteStatementContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	whereClause() {
	    return this.getTypedRuleContext(WhereClauseContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterDeleteRecord(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitDeleteRecord(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitDeleteRecord(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.DeleteRecordContext = DeleteRecordContext;

class SelectColumnsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_selectColumns;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class SpecificColumnsContext extends SelectColumnsContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	columnList() {
	    return this.getTypedRuleContext(ColumnListContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterSpecificColumns(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitSpecificColumns(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitSpecificColumns(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.SpecificColumnsContext = SpecificColumnsContext;

class ColumnListSelectContext extends SelectColumnsContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	columnList() {
	    return this.getTypedRuleContext(ColumnListContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterColumnListSelect(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitColumnListSelect(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitColumnListSelect(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.ColumnListSelectContext = ColumnListSelectContext;

class AllColumnsContext extends SelectColumnsContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }


	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterAllColumns(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitAllColumns(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitAllColumns(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

HomweParser.AllColumnsContext = AllColumnsContext;

class WhereClauseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_whereClause;
    }

	aneVariants() {
	    return this.getTypedRuleContext(AneVariantsContext,0);
	};

	condition() {
	    return this.getTypedRuleContext(ConditionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterWhereClause(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitWhereClause(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitWhereClause(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AneVariantsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_aneVariants;
    }


	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterAneVariants(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitAneVariants(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitAneVariants(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ConditionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HomweParser.RULE_condition;
    }

	IDENTIFIER() {
	    return this.getToken(HomweParser.IDENTIFIER, 0);
	};

	value() {
	    return this.getTypedRuleContext(ValueContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.enterCondition(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HomweListener ) {
	        listener.exitCondition(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HomweVisitor ) {
	        return visitor.visitCondition(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LimitClauseContext extends antlr4.ParserRuleContext {
